# cecil-sns

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  canister_ids.json  dfx.json  file_structure.txt  package-lock.json  package.json  proposal_backend_template.md
backend/canisters/sns_neuron_controller/: CHANGELOG.md
backend/canisters/sns_neuron_controller/api/: Cargo.toml  can.did
backend/canisters/sns_neuron_controller/impl/: Cargo.toml
backend/external_canisters/nns_governance/api/: Cargo.toml
backend/external_canisters/sns_rewards/api/: Cargo.toml
backend/external_canisters/sns_rewards/c2c_client/: Cargo.toml
backend/integration_testing/: Cargo.toml
backend/integration_testing/src/: lib.rs  wasms.rs
backend/integration_testing/src/client/: mod.rs  nns_governance.rs  pocket.rs  sns_neuron_controller.rs
backend/integration_testing/src/sns_neuron_controller_suite/setup/: mod.rs  setup.rs  setup_sns_neuron_controller.rs
backend/integration_testing/src/sns_neuron_controller_suite/tests/: mod.rs  test_process_goldao_neurons.rs  test_process_neurons.rs  test_process_ogy_neurons.rs  test_stake_icp_neurons.rs
backend/integration_testing/src/sns_test_env/: mod.rs  nns_test_env.rs  sns_init_args.rs  sns_test_env.rs
backend/integration_testing/tmp_patch/lifeline/impl/: Cargo.toml
backend/integration_testing/tmp_patch/lifeline/impl/src/: lib.rs  main.rs
backend/libraries/ledger_utils/src/: lib.rs
backend/libraries/types/src/: lib.rs  (+1 more)
client/cecil_dao_website/: CHANGELOG.md  index.html  package.json  tsconfig.app.json
client/cecil_dao_website/src/: App.css  App.tsx  index.scss  main.tsx  router.tsx
scripts/: canister_prebuilds.sh  deploy_backend_canister.sh  prepare_proposal_summary.sh
scripts/canister-deploy/: deploy-sns_neuron_controller.sh
scripts/ci-cd/: .canister_builds.yml  .canister_deploys.yml  .canister_unit_test_coverage.yml  .dfx_templates.yml  .frontend_builds.yml  .frontend_deploys.yml  .frontend_linter.yml  .integration_tests.yml  .rust_template.yml
scripts/frontend-deploy/: frontend_config.json
sns/: create-nns-proposal.sh  sns_init.yaml
(+72 files in other folders)
