[package]
name = "integration_testing"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pocket-ic = { workspace = true }
candid = "0.10.11"
ic-cdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
types = { path = "../libraries/types" }
utils = { path = '../libraries/utils' }
canister_time = { path = '../libraries/canister_time' }
icrc-ledger-types = { workspace = true }
icrc_ledger_canister = { path = "../external_canisters/icrc_ledger/api" }
rand = "0.8.5"
lazy_static = "1.4.0"
hex = "0.4"
prost = { workspace = true }
sha2 = "0.10.8"
rand_chacha = "0.3.1"
sns_neuron_controller_api_canister = { path = "../canisters/sns_neuron_controller/api" }
sns_rewards_api_canister = { path = "../external_canisters/sns_rewards/api" }

# SNS
sns_governance_canister = { path = '../external_canisters/sns_governance/api' }
sns_root_canister = { path = '../external_canisters/sns_root/api' }
sns_ledger_canister = { path = '../external_canisters/sns_ledger/api' }
sns_swap_canister = { path = '../external_canisters/sns_swap/api' }
sns_index_canister = { path = '../external_canisters/sns_index/api' }

nns_governance_canister = { path = '../external_canisters/nns_governance/api' }

# DFINITY crates
ic-nns-test-utils = { git = "https://github.com/dfinity/ic.git", branch = "master", package = "ic-nns-test-utils" }